# intro-to-dl-hse

./: .gitignore  README.md  glossary.md
homeworks/: homework-01-mlp.ipynb  homework-02-cnn.ipynb  homework-03-text.ipynb  homework-bonus-knn.ipynb
homeworks-small/: shw-01-mlp-light.ipynb  shw-02-cnn.ipynb
homeworks-small/shw-01-mlp/: shw-01-mlp-part1.ipynb  shw-01-mlp-part2.ipynb
homeworks-small/shw-01-mlp/modules/: __init__.py  activations.py  base.py  criterions.py  dataloader.py  layers.py  optimizers.py
homeworks-small/shw-01-mlp/tests/: __init__.py  test_activations.py  test_base.py  test_bn.py  test_criterions.py  test_dataloader.py  test_dropout.py  test_linear.py  test_optimizers.py  test_sequential.py
homeworks-small/shw-03-rnn/: dataset.py  model.py  shw-03-rnn.ipynb  train.py
homeworks-small/shw-04-ssl-bonus/: CLIPDataset.py  ImageEncoder.py  ProjectionHead.py  TextEncoder.py  my_clip.ipynb
homeworks-theory/: thw-01-mlp.tex  thw-02-cnn.tex
seminars/192/: seminar-01-pytorch-intro.ipynb  seminar-02-conv.ipynb
seminars/193/: seminar-01-pytorch-intro.ipynb  seminar-02-03-convnets.ipynb  seminar-04-rnn.ipynb  seminar-05-transformer.ipynb  seminar-06-distillation.ipynb
seminars/201/: Seminar_1_Intro_to_DL-2.ipynb  Seminar_2_Intro_to_DL-2.ipynb  Seminar_3_Intro_to_DL-2.ipynb  plot_trajectory.py  seminar_04.ipynb
seminars/202/: seminar-01-02.ipynb  seminar-03.ipynb  seminar-04.ipynb  seminar-06.ipynb  seminar-07-rnn.ipynb  seminar-08-transformer.ipynb  seminar-11-distillation.ipynb  seminar-12-adversarial.ipynb  seminar-13-vae.ipynb
seminars/203/: Seminar_1_Intro_to_DL.ipynb  Seminar_2_Intro_to_DL.ipynb  Seminar_3_Intro_to_DL.ipynb  Seminar_4_Intro_to_DL.ipynb  Seminar_6_Intro_to_DL.ipynb
seminars/204/: Seminar_1_Intro_to_DL_204.ipynb  Seminar_2_Intro_to_DL_204.ipynb  Seminar_3-4_Intro_to_DL_204.ipynb
seminars/211/: Seminar_13_DL_1.ipynb  Seminar_1_DL_1.ipynb  Seminar_2_DL_1.ipynb  Seminar_3_DL_1.ipynb  Seminar_4_DL_1.ipynb  Seminar_6_DL_1.ipynb  Seminar_7_DL_1.ipynb  Seminar_9_DL_1.ipynb
seminars/211/Seminar_11/: README.txt  Seminar_11_DL_1.ipynb  training.py
seminars/212/: Dockerfile  Makefile  pyproject.toml
seminars/212/01/: Seminar_1_Intro_to_DL.ipynb
seminars/212/02/: Seminar_2_Intro_to_DL.ipynb
seminars/212/04/: Seminar_4_Intro_to_DL.ipynb
seminars/212/06/: Seminar_6_Intro_to_DL.ipynb
seminars/212/07/: Seminar_7_Intro_to_DL.ipynb
seminars/212/08/: Seminar_8_Intro_to_DL.ipynb
seminars/212/12/: seminar-12-adversarial.ipynb
seminars/212/cons/: cons.ipynb  req.txt
seminars/213/: seminar-01-intro.ipynb  seminar-06-w2v.ipynb  seminar-08-transformer.ipynb  seminar-11-adversarial.ipynb  seminar-12-vae.ipynb  seminar_2.ipynb  seminar_7.ipynb  seminar_9.txt
seminars/213/seminar-04-unet/: predict.py
(+47 files in other folders)
